# probee

./: .gitignore  Cargo.toml  IDEAS.md  README.md  build.rs  release.sh
.github/workflows/: release_macos.yml
macos/: Info.plist  entitlements.plist
server/edge/: updates.ts
src/: actions.rs  app.rs  assets.rs  errors.rs  events.rs  hotkey.rs  main.rs  root.rs  settings.rs  state.rs  storage.rs  theme.rs  utils.rs  window.rs  windows.rs
src/platform/: mac.rs  macos.rs  mod.rs
src/services/: api.rs  assistant.rs  auth.rs  clipboard.rs  hotkey.rs  hotkey2.rs  logger.rs  mod.rs  ocr.rs  screen.rs  selection.rs  storage.rs
src/services/assistant/: assistant.rs  mod.rs
src/services/assistant/providers/: anthropic.rs  mod.rs  openai.rs
src/state/: app.rs  app_state.rs  error_state.rs  mod.rs  settings.rs  settings_state.rs
src/ui/: assistants.rs  back_button.rs  colors.rs  error.rs  footer.rs  icon.rs  input.rs  intro.rs  login.rs  login_button.rs  mod.rs  output.rs  profile_button.rs  size_observer.rs  styled.rs  text_input.rs  theme.rs  window_button.rs
src/ui/buttons/: app_button.rs  assistant_button.rs  copy_output_button.rs  login_button.rs  mod.rs  mode_button.rs
src/ui/components/: checkbox.rs  dropdown.rs  error.rs  header.rs  icon.rs  icon_ref.rs  mod.rs  root.rs  settings_tab.rs  skeleton.rs  slider.rs  spinner.rs
src/ui/components/button/: button.rs  button_group.rs  toggle.rs
src/ui/components/input/: blink_cursor.rs  change.rs  clear_button.rs  cursor.rs  element.rs  history.rs  input.rs  input_deprecated.rs  mask_pattern.rs  mod.rs  mode.rs  state.rs  text_input.rs  text_wrapper.rs
src/ui/components/list/: list.rs  list_item.rs  loading.rs
src/ui/components/scroll/: mod.rs  scrollable.rs  scrollable_mask.rs  scrollbar.rs
src/ui/components/text/: mod.rs
src/ui/views/: mod.rs
src/ui/views/about/: about.rs  mod.rs
src/ui/views/assistant/: assistant.rs  assistant_button.rs  assistant_header.rs  assistant_selector.rs  clear_output_button.rs  copy_output_button.rs  footer.rs  loading.rs  mod.rs  output.rs
src/ui/views/assistant_settings/: assistant_settings.rs  mod.rs  prompt_editor.rs
src/ui/views/assistant_settings/components/: mod.rs  prompt_list.rs
src/ui/views/general_settings/: general_settings.rs  mod.rs
src/ui/views/general_settings/components/: mod.rs
src/ui/views/hotkeys/: hotkeys.rs  mod.rs
src/ui/views/hotkeys/components/: hotkey_input.rs  mod.rs
src/ui/views/login/: login.rs  mod.rs  utils.rs
src/ui/views/profile/: mod.rs  profile.rs  utils.rs
src/ui/views/prompt/: mod.rs  prompt.rs
src/ui/views/prompt_editor/: mod.rs  prompt_editor.rs
src/ui/views/settings/: about.rs  assistant.rs  general.rs  hotkeys.rs  mod.rs  settings.rs  shortcuts.rs  tab.rs
src/ui/views/settings/components/: hotkey_input.rs  key.rs  mod.rs  prompt_list.rs  tab.rs  theme_switch.rs
src/utils/: actions.rs  devtools.rs  keyboard.rs  mod.rs  window.rs
src/views/: buttons.rs  error.rs  icon.rs  intro.rs  loading.rs  mod.rs  output.rs  resize_observer.rs  size_observer.rs  text_input.rs
