[package]
name = "cmdi"
version = "0.1.23"
edition = "2021"
description = "Command I is a shortcut to your own collection of AI prompts."

[package.metadata.packager]
product_name = "Command I"
identifier = "io.github.antonkalinin.cmdi"
copyright = "Copyright (c) Anton Kalinin 2024. All rights reserved."
category = "Productivity"
icons = ["icons/*.png"]

[package.metadata.packager.macos]
entitlements = "macos/entitlements.plist"

[dependencies]
anyhow = "1.0.91"                                                                                        # error handling
arboard = "3.4.1"
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
dotenv = "0.15.0"                                                                                        # env vars
global-hotkey = "0.6.3"                                                                                  # global hotkeys
gpui = { git = "https://github.com/antonKalinin/zed", rev = "b9b995af25394e05f7753becacf79273d572b243" } # ui framework (forked and patched to support window size changes)
image = "0.25.4"                                                                                         # image processing
ocrs = "0.9.0"                                                                                           # text detection and recognition
reqwest = { version = "0.12.9", features = ["json"] }                                                    # http client
rten = "0.13.1"                                                                                          # nn models and inference
rust-embed = "8.5.0"                                                                                     # embedding assets
serde = { version = "1.0.215", features = ["derive"] }                                                   # serialization core
serde_json = "1.0.133"                                                                                   # json serialization
smallvec = "1.13.2"                                                                                      # optimized vector struct used in gpui elements
thiserror = "2.0.7"                                                                                      # custom errors
unicode-segmentation = "1.12.0"                                                                          # character segmentation for input handling

[build-dependencies]
dotenv = "0.15.0" # env vars

# platform specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
accessibility = "0.1.6"
accessibility-sys = "0.1.3"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-name = "v{{version}}"
push = true
