[package]
name = "cmdi"
version = "0.3.16"
edition = "2021"
description = "Command I is a shortcut to your own collection of AI prompts."

[package.metadata.packager]
product_name = "Command I"
identifier = "io.github.antonkalinin.cmdi"
copyright = "Copyright (c) Anton Kalinin 2025. All rights reserved."
category = "Productivity"
icons = ["icons/*.png"]

[package.metadata.packager.macos]
entitlements = "macos/entitlements.plist"
infoPlistPath = "macos/Info.plist"

[package.metadata.packager.dmg]
appFolderPosition = { x = 432, y = 180 }
appPosition = { x = 180, y = 180 }
background = "macos/dmg_background.png"
windowSize = { width = 640, height = 426 }
windowPosition = { x = 640, y = 480 }

[dependencies]
aes-gcm = "0.10.3"                                                                                                          # storage encryption
anyhow = "1.0.91"                                                                                                           # error handling
arboard = "3.4.1"                                                                                                           # clipboard access
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.85"                                                                                                      # async traits for assistant providers
base64 = "0.22.1"                                                                                                           # authentication
dirs = "6.0.0"                                                                                                              # app data directory
dotenv = "0.15.0"                                                                                                           # env vars
futures = "0.3.31"                                                                                                          # stream processing
global-hotkey = { git = "https://github.com/antonKalinin/global-hotkey", rev = "eeff5eafaed48df92605da746d8cf3c62dc5122c" } # global hotkeys
gpui = { git = "https://github.com/antonKalinin/zed", rev = "01b54f5655c02f6150d45ff08898d9b76ed28b8a" }                    # ui framework (forked and patched to support window size changes)
image = "0.25.4"                                                                                                            # image processing
rand = "0.8.5"                                                                                                              # authentication
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "stream"] }                                                             # http client
rust-embed = "8.5.0"                                                                                                        # embedding assets
serde = { version = "1.0.215", features = ["derive"] }                                                                      # serialization core
serde_json = "1.0.138"                                                                                                      # json de/serialization
sha2 = "0.10.8"                                                                                                             # authentication
smallvec = "1.13.2"                                                                                                         # optimized vector struct used in gpui elements
thiserror = "2.0.7"                                                                                                         # custom errors
tiny_http = "0.12.0"
tokio = { version = "1.43.0", features = ["sync"] }
tokio-stream = "0.1.17"
unicode-segmentation = "1.12.0"                                                                                             # character segmentation for input handling
url = "2.5.4"

# platform specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
accessibility = "0.1.6"
accessibility-sys = "0.1.3"

[build-dependencies]
dotenv = "0.15.0" # env vars

[dev-dependencies]
tempfile = "3.15.0"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-name = "v{{version}}"
push = true
