[package]
name = "probee"
authors = ["Anton Kalinin <hurricanebox@gmail.com>"]
homepage = "https://probee.ai/"
version = "0.0.14"
edition = "2021"
description = "Probee is a shortcut to your own collection of AI prompts."

[package.metadata.packager]
product_name = "Probee"
authors = ["Anton Kalinin <hurricanebox@gmail.com>"]
identifier = "ai.probee"
copyright = "Copyright (c) Anton Kalinin 2025. All rights reserved."
category = "Productivity"
icons = ["icons/*.png"]
resources = ["assets/images/icon_white_32.png"]

[package.metadata.packager.macos]
minimum_system_version = "11.0"
frameworks = []
entitlements = "macos/entitlements.plist"
infoPlistPath = "macos/Info.plist"
signingIdentity = "Developer ID Application: Anton Kalinin (4B82KM45QA)"

[package.metadata.packager.dmg]
appFolderPosition = { x = 432, y = 180 }
appPosition = { x = 180, y = 180 }
background = "macos/dmg_background.png"
windowPosition = { x = 640, y = 480 }
windowSize = { width = 640, height = 426 }

[dependencies]
aes-gcm = "0.10.3"                                                                                       # storage encryption
anyhow = "1.0.91"                                                                                        # error handling
arboard = "3.4.1"                                                                                        # clipboard access
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.85"                                                                                   # async traits for assistant providers
base64 = "0.22.1"                                                                                        # authentication
cargo-packager-updater = "0.2.2"                                                                         # updates dowloading and installation
dirs = "6.0.0"                                                                                           # app data directory
dotenv = "0.15.0"                                                                                        # env vars
futures = "0.3.31"                                                                                       # stream processing
gpui = { git = "https://github.com/antonKalinin/zed", rev = "b538ffde21d4cdbae6dc6577ed2230aea1df2fb6" } # ui framework (forked and patched to support window size changes & agent ui)
image = "0.25.4"                                                                                         # image processing
rand = "0.8.5"                                                                                           # authentication
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "stream"] }                                          # http client
rust-embed = "8.5.0"                                                                                     # embedding assets
serde = { version = "1.0.215", features = ["derive"] }                                                   # serialization core
serde_json = "1.0.138"                                                                                   # json de/serialization
sha2 = "0.10.8"                                                                                          # authentication
smallvec = "1.13.2"                                                                                      # optimized vector struct used in gpui elements
thiserror = "2.0.7"                                                                                      # custom errors
time = "0.3.41"
tiny_http = "0.12.0"                                                                                     # auth response catching
tokio = { version = "1.43.0", features = ["sync"] }
tokio-stream = "0.1.17"
unicode-segmentation = "1.12.0"                                                                          # character segmentation for input handling
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }                                                         # assistant id generation

# platform specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.1.6"
accessibility-sys = "0.1.3"
cocoa = "0.26.0"
core-foundation = "0.9.4"
core-graphics = "0.24.0"
objc = "0.2.7"
objc_id = "0.1.1"

[build-dependencies]
dotenv = "0.15.0" # env vars

[dev-dependencies]
tempfile = "3.20.0"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-name = "v{{version}}"
push = true
